--- a/scripts/install
+++ b/scripts/install
@@ -116,7 +116,7 @@ ynh_script_progression --message="Creation of the configuration directory..." --
 ynh_replace_string --match_string="__PATH__" --replace_string="/$app" --target_file="../conf/ServerConfig.json"
 # Create the directories and copy the configuration file
 mkdir -p "$datadir_final"
-cp ../conf/config.xml "$datadir_final"
+cp ../conf/ServerConfig.json "$datadir_final"
 
 #=================================================
 # SETUP SYSTEMD
