--- a/scripts/install
+++ b/scripts/install
@@ -89,7 +89,7 @@ ynh_install_app_dependencies $pkg_dependencies
 ynh_script_progression --message="Setting up source files..." --time --weight=1
 
 ynh_app_setting_set --app=$app --key=final_path --value=$final_path
-ynh_setup_source --dest_dir="$final_path"
+ynh_setup_source_multiarch --dest_dir="$final_path"
 
 #=================================================
 # NGINX CONFIGURATION
